--- a/Final assignment/Projects.html
+++ b/Final assignment/Projects.html
@@ -12,14 +12,14 @@
 <body>
 	<header>
 			<nav>
-				<div id="logo"><a href="Homepage.html"><img src="assets/JM logo.png" width="100px" height="100px" alt="logo"></a>
+				<div id="logo"><a href="index.html"><img src="assets/JM logo.png" width="100px" height="100px" alt="logo"></a>
 				</div>
 					<ul id="navbtns">
 					  <li><a href="contact.html">Contact</a></li>
 					  <li><a href="about.html">About</a></li>
 					  <li><a href="jaylo.html">JayLo Builds</a></li>
 					  <li><a class="active" href="projects.html">Projects</a></li>
-					  <li><a href="Homepage.html">Home</a></li>
+					  <li><a href="index.html">Home</a></li>
 					</ul>
 			</nav>
 	</header>
